<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_button_start">Start tracking!</string>
    <string name="str_button_startBack">Back to tracking</string>
    <string name="str_button_log">Trip log</string>
    <string name="str_button_chart">Global statistics</string>
    <string name="str_button_prices">Fuel prices</string>
    <string name="str_button_settings">Settings</string>
    <string name="title_activity_track">TrackActivity</string>
    <string name="str_button_resumeTrack">Resume</string>
    <string name="str_button_pauseTrack">Pause</string>
    <string name="str_button_endTrack">End</string>
    <string name="str_stat_consumed">FCON:&#160;</string>
    <string name="str_stat_cost">COST:&#160;</string>
    <string name="str_stat_distance">DIST:&#160;</string>
    <string name="str_stat_speedAvg">SPDA:&#160;</string>
    <string name="str_stat_speedCurr">SPDC:&#160;</string>
    <string name="str_stat_timeStart">TIMS:&#160;</string>
    <string name="str_stat_timeCurr">TIMC:&#160;</string>
    <string name="str_stat_timeEnd">TIMF:&#160;</string>
    <string name="str_stat_adrStart">FROM:&#160;</string>
    <string name="str_stat_adrEnd">END:&#160;</string>
    <string name="str_stat_consumedVal">&#160;l</string>
    <string name="str_stat_costVal">&#160;zl</string>
    <string name="str_stat_distanceVal">&#160;km</string>
    <string name="str_stat_speedAvgVal">&#160;km\\h</string>
    <string name="str_stat_speedCurrVal">&#160;km\\h</string>
    <string name="str_stat_timeStartVal"></string>
    <string name="str_stat_timeCurrVal"></string>
    <string name="str_stat_timeEndVal"></string>
    <string name="str_stat_empty">---</string>
    <string name="str_stat_addressunknown">unknown</string>
    <string name="str_set_title">Settings</string>
    <string name="str_set_fuelConsumption">Fuel consumption:&#160;</string>
    <string name="str_set_fuelConsumptionVal">&#160;l//100 km</string>
    <string name="str_set_fuelType">Fuel type:&#160;</string>
    <string name="str_set_fuelTypeGasoline">Petrol</string>
    <string name="str_set_fuelTypeDiesel">Diesel</string>
    <string name="str_set_fuelTypePB95">PB 95</string>
    <string name="str_set_fuelTypePB98">PB 98</string>
    <string name="str_set_fuelTypeON">Diesel</string>
    <string name="str_set_fuelTypeLPG">LPG</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_log">Trip Log</string>
    <string name="title_section1">Trip Log</string>
    <string name="title_section2">Trip Stats</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fuel">FuelActivity</string>
    <string name="str_fuels_siteTitle">Getting fuel prices from:&#160;</string>
    <string name="str_fuels_siteAddress">tba</string>
    <string name="str_fuels_buttonUpdate">Update</string>
    <string name="str_fuels_lastUpdated">Last updated:&#160;</string>
    <string name="str_fuels_updating">Updating&#8230;</string>
    <string name="str_fuels_error">Update failed :(</string>
    <string name="str_fuels_errorNoInternet">No internet connection :(</string>
    <string name="title_activity_global_stats">GlobalStatsActivity</string>
    <string name="str_gs_totaltripcount">Total number of trips:&#160;</string>
    <string name="str_gs_totalfuelcost">Total fuel cost:&#160;</string>
    <string name="str_gs_avgfuelcost">Average fuel cost:&#160;</string>
    <string name="str_gs_totalfuelcons">Total fuel consumed:&#160;</string>
    <string name="str_gs_avgfuelcons">Average fuel consumed:&#160;</string>
    <string name="str_gs_avgspeed">Average speed:&#160;</string>
    <string name="str_gs_avgdistance">Average trip distance:&#160;</string>
    <string name="str_gs_totaldistance">Total trips distance:&#160;</string>
    <string name="str_gs_avgtime">Average trip time:&#160;</string>
    <string name="str_gs_totaltime">Total trips time:&#160;</string>
    <string name="str_gs_days">days</string>
    <string name="str_chart_cost">Fuel costs</string>
    <string name="str_chart_cons">Fuel consumed</string>
    <string name="str_chart_spd">Average speed</string>
    <string name="str_chart_dist">Distance travelled</string>
    <string name="str_chart_time">Time taken</string>
    <string name="str_chart_val_date">Date</string>
    <string name="str_gs_filter_datefrom">Date from:</string>
    <string name="str_gs_filter_dateto">Date to:</string>
    <string name="str_gs_filter_startloc">Start address:</string>
    <string name="str_gs_filter_endloc">End address:</string>
    <string name="str_gs_filter_anyloc">all</string>

</resources>
