<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <fragment
          android:id="@+id/mapStats"
          android:tag="MAPSTATS"
          android:layout_width="fill_parent"
          android:layout_height="match_parent"
          android:layout_weight="60"
          android:layout_margin="5dp"
          android:name="com.google.android.gms.maps.SupportMapFragment"/>
    
    <ScrollView 
        android:id="@+id/svStats"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="40"
        android:layout_margin="5dp">
        
        <TableLayout
            android:id="@+id/tlMain"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical">
            
            <TableRow 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
            	android:orientation="vertical"
                >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatisticStyle"
                    android:text="@string/str_stat_timeStart"
                    />
                  
                <TextView
                    android:id="@+id/tvLogstatStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    style="@style/StatisticStyle"
                    android:text=""
                    />
            </TableRow>
                
            <TableRow 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
            	android:orientation="vertical"
                >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatisticStyle"
                    android:text="@string/str_stat_timeEnd"
                    />
                  
                <TextView
                    android:id="@+id/tvLogstatEndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    style="@style/StatisticStyle"
                    android:text=""
                    />
            </TableRow>    
            
            <TableRow 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
            	android:orientation="vertical"
                >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatisticStyle"
                    android:text="@string/str_stat_adrStart"
                    />
                  
                <TextView
                    android:id="@+id/tvLogstatStartAdr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    style="@style/StatisticStyle"
                    android:text=""
                    />
            </TableRow>
            
            <TableRow 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
            	android:orientation="vertical"
                >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatisticStyle"
                    android:text="@string/str_stat_adrEnd"
                    />
                  
                <TextView
                    android:id="@+id/tvLogstatEndAdr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    style="@style/StatisticStyle"
                    android:text=""
                    />
            </TableRow>
            
            <TableRow 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
            	android:orientation="vertical"
                >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatisticStyle"
                    android:text="@string/str_stat_cost"
                    />
                  
                <TextView
                    android:id="@+id/tvLogstatFCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    style="@style/StatisticStyle"
                    android:text=""
                    />
            </TableRow>
            
            <TableRow 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
            	android:orientation="vertical"
                >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatisticStyle"
                    android:text="@string/str_stat_consumed"
                    />
                  
                <TextView
                    android:id="@+id/tvLogstatFCons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    style="@style/StatisticStyle"
                    android:text=""
                    />
            </TableRow>
            
            <TableRow 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
            	android:orientation="vertical"
                >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatisticStyle"
                    android:text="@string/str_stat_distance"
                    />
                  
                <TextView
                    android:id="@+id/tvLogstatDist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    style="@style/StatisticStyle"
                    android:text=""
                    />
            </TableRow>
            
            <TableRow 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
            	android:orientation="vertical"
                >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatisticStyle"
                    android:text="@string/str_stat_timeCurr"
                    />
                  
                <TextView
                    android:id="@+id/tvLogstatTimeTaken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    style="@style/StatisticStyle"
                    android:text=""
                    />
            </TableRow>
            
            <TableRow 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
            	android:orientation="vertical"
                >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatisticStyle"
                    android:text="@string/str_stat_speedAvg"
                    />
                  
                <TextView
                    android:id="@+id/tvLogstatSpeedAvg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    style="@style/StatisticStyle"
                    android:text=""
                    />
            </TableRow>
            
        </TableLayout>
        
    </ScrollView>

</LinearLayout>
